# stmxx

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  shell.nix
src/: lib.cpp  main.cpp  transaction.cpp  transaction_t.cpp  util.cpp
test/: CMakeLists.txt  test.cpp
